// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typography demo > renders basic correctly 1`] = `
<article
  class="ant-typography css-var-root"
>
  <h1
    class="ant-typography css-var-root"
  >
    Introduction
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h1>
  <div
    class="ant-typography css-var-root"
  >
     In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of development. 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     After massive project practice and summaries, Antdv Next, a design language for background applications, is refined by Ant UED Team, which aims to 
    <span
      class="ant-typography css-var-root"
    >
      <strong>
         uniform the user interface specs for internal background projects, lower the unnecessary cost of design differences and implementation and liberate the resources of design and front-end development 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </strong>
      <!---->
      <!---->
      <!---->
    </span>
     . 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <h2
    class="ant-typography css-var-root"
  >
     Guidelines and Resources 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h2>
  <div
    class="ant-typography css-var-root"
  >
     We supply a series of design principles, practical patterns and high quality design resources (
    <span
      class="ant-typography css-var-root"
    >
      <code>
         Sketch 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </code>
      <!---->
      <!---->
      <!---->
    </span>
     and 
    <span
      class="ant-typography css-var-root"
    >
      <code>
         Axure 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </code>
      <!---->
      <!---->
      <!---->
    </span>
    ), to help people create their product prototypes beautifully and efficiently. 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    <ul>
      <li>
        <a
          class="ant-typography ant-typography-link css-var-root"
          href="/docs/spec/proximity"
        >
           Principles 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </a>
      </li>
      <li>
        <a
          class="ant-typography ant-typography-link css-var-root"
          href="/docs/spec/overview"
        >
           Patterns 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </a>
      </li>
      <li>
        <a
          class="ant-typography ant-typography-link css-var-root"
          href="/docs/resources"
        >
           Resource Download 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </a>
      </li>
    </ul>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     Press 
    <span
      class="ant-typography css-var-root"
    >
      <kbd>
         Esc 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </kbd>
      <!---->
      <!---->
      <!---->
    </span>
     to exit... 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-divider css-var-root ant-divider-horizontal ant-divider-rail"
    role="separator"
  >
    <!---->
  </div>
  <h1
    class="ant-typography css-var-root"
  >
    介绍
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h1>
  <div
    class="ant-typography css-var-root"
  >
     蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂,而且变动和并发频繁,常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件,可以通过抽象得到一些稳定且高复用性的内容。 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     随着商业化的趋势,越来越多的企业级产品对更好的用户体验有了进一步的要求。带着这样的一个终极目标,我们(蚂蚁集团体验技术部)经过大量的项目实践和总结,逐步打磨出一个服务于企业级产品的设计体系 Antdv Next。基于
    <span
      class="ant-typography css-var-root"
    >
      <mark>
         『确定』和『自然』 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </mark>
      <!---->
      <!---->
      <!---->
    </span>
     的设计价值观,通过模块化的解决方案,降低冗余的生产成本,让设计者专注于 
    <span
      class="ant-typography css-var-root"
    >
      <strong>
         更好的用户体验 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </strong>
      <!---->
      <!---->
      <!---->
    </span>
    。 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <h2
    class="ant-typography css-var-root"
  >
     设计资源 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h2>
  <div
    class="ant-typography css-var-root"
  >
     我们提供完善的设计原则、最佳实践和设计资源文件(
    <span
      class="ant-typography css-var-root"
    >
      <code>
         Sketch 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </code>
      <!---->
      <!---->
      <!---->
    </span>
     和 
    <span
      class="ant-typography css-var-root"
    >
      <code>
         Axure 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </code>
      <!---->
      <!---->
      <!---->
    </span>
    ),来帮助业务快速设计出高质量的产品原型。 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    <ul>
      <li>
        <a
          class="ant-typography ant-typography-link css-var-root"
          href="/docs/spec/proximity-cn"
        >
           设计原则 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </a>
      </li>
      <li>
        <a
          class="ant-typography ant-typography-link css-var-root"
          href="/docs/spec/overview-cn"
        >
           设计模式 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </a>
      </li>
      <li>
        <a
          class="ant-typography ant-typography-link css-var-root"
          href="/docs/resources-cn"
        >
           设计资源 
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
          <!---->
        </a>
      </li>
    </ul>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    AntV 是蚂蚁集团全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
    AntV 是蚂蚁集团全新一代数据可视化解决方案，致力于提供一套简单方便、专业可靠、不限可能的数据可视化最佳实践。得益于丰富的业务场景和用户需求挑战，AntV 经历多年积累与不断打磨，已支撑整个阿里集团内外 20000+ 业务系统，通过了日均千万级 UV 产品的严苛考验。
我们正在基础图表，图分析，图编辑，地理空间可视化，智能可视化等各个可视化的领域耕耘，欢迎同路人一起前行。
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     按
    <span
      class="ant-typography css-var-root"
    >
      <kbd>
         Esc 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </kbd>
      <!---->
      <!---->
      <!---->
    </span>
    键退出阅读…… 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</article>
`;

exports[`typography demo > renders copyable correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-typography css-var-root"
  >
     This is a copyable text. 
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Copy"
      class="ant-typography-copy"
      type="button"
    >
      <span
        class="anticon-copy"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     Replace copy text. 
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Copy"
      class="ant-typography-copy"
      type="button"
    >
      <span
        class="anticon-copy"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     Custom Copy icon and replace tooltips text. 
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="click here"
      class="ant-typography-copy"
      type="button"
    >
      <span
        class="anticon-smile"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     Hide Copy tooltips. 
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Copy"
      class="ant-typography-copy"
      type="button"
    >
      <span
        class="anticon-copy"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
     Request copy text. 
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Copy"
      class="ant-typography-copy"
      type="button"
    >
      <span
        class="anticon-copy"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <span
    class="ant-typography css-var-root"
  >
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Copy"
      class="ant-typography-copy ant-typography-copy-icon-only"
      type="button"
    >
      <span
        class="anticon-copy"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </span>
</div>
`;

exports[`typography demo > renders editable correctly 1`] = `
<div
  data-v-app=""
>
  <div
    class="ant-typography css-var-root"
  >
    This is an editable text.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    aria-label="This is a loooooooooooooooooooooooooooooooong editable text with suffix."
    class="ant-typography ant-typography-ellipsis css-var-root"
  >
    This is a loooooooooooooooooooooooooooooooong editable text 
    <!---->
    with suffix.
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    Custom Edit icon and replace tooltip text.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="click to edit text"
      class="ant-typography-edit"
      type="button"
    >
      <!---->
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
   Trigger edit with: 
  <div
    class="ant-radio-group ant-radio-group-outline css-var-root ant-radio-css-var"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-radio-checked ant-wave-target"
        name="v-6"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span
        class="ant-radio-label"
      >
         icon 
      </span>
    </label>
    <label
      class="ant-radio-wrapper css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-wave-target"
        name="v-6"
      >
        <input
          class="ant-radio-input"
          type="radio"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span
        class="ant-radio-label"
      >
         text 
      </span>
    </label>
    <label
      class="ant-radio-wrapper css-var-root ant-radio-css-var"
    >
      <span
        class="ant-radio ant-wave-target ant-wave-target"
        name="v-6"
      >
        <input
          class="ant-radio-input"
          type="radio"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span
        class="ant-radio-label"
      >
         both 
      </span>
    </label>
  </div>
  <div
    class="ant-typography css-var-root"
  >
    Text or icon as trigger - click to start editing.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="click to edit text"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    Editable text with a custom enter icon in edit field.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="click to edit text"
      class="ant-typography-edit"
      type="button"
    >
      <!---->
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    Editable text with no enter icon in edit field.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="click to edit text"
      class="ant-typography-edit"
      type="button"
    >
      <!---->
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    Hide Edit tooltip.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    class="ant-typography css-var-root"
  >
    This is an editable text with limited length.
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <h1
    class="ant-typography css-var-root"
    style="margin: 0px;"
  >
     h1. Antdv Next 
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h1>
  <h2
    class="ant-typography css-var-root"
    style="margin: 0px;"
  >
     h2. Antdv Next 
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h2>
  <h3
    class="ant-typography css-var-root"
    style="margin: 0px;"
  >
     h3. Antdv Next 
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h3>
  <h4
    class="ant-typography css-var-root"
    style="margin: 0px;"
  >
     h4. Antdv Next 
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h4>
  <h5
    class="ant-typography css-var-root"
    style="margin: 0px;"
  >
     h5. Antdv Next 
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Edit"
      class="ant-typography-edit"
      type="button"
    >
      <span
        class="anticon-edit"
        role="button"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h5>
</div>
`;

exports[`typography demo > renders ellipsis correctly 1`] = `
<div
  data-v-app=""
>
  <button
    aria-checked="true"
    checked="true"
    class="ant-switch css-var-root ant-switch-checked"
    role="switch"
    type="button"
  >
    <div
      class="ant-switch-handle"
    >
      <!---->
    </div>
    <span
      class="ant-switch-inner"
    >
      <span
        class="ant-switch-inner-checked"
      >
        <!---->
      </span>
      <span
        class="ant-switch-inner-unchecked"
      >
        <!---->
      </span>
    </span>
  </button>
  <div
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-var-root"
  >
     Antdv Next, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <div
    aria-label=" Antdv Next, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. "
    class="ant-typography ant-typography-ellipsis css-var-root"
  >
     Antdv Next, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. Ant Design, a design language for background applications, is refined by Ant UED Team. 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
  <span
    aria-describedby="test-id"
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-var-root"
    style="width: 200px;"
  >
     Antdv Next, a design language for background applications, is refined by Ant UED Team. 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </span>
  <!---->
  <span
    aria-describedby="test-id"
    class="ant-typography ant-typography-ellipsis ant-typography-ellipsis-single-line css-var-root"
    style="width: 200px;"
  >
    <code>
       Antdv Next, a design language for background applications, is refined by Ant UED Team. 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </code>
    <!---->
    <!---->
    <!---->
  </span>
  <!---->
</div>
`;

exports[`typography demo > renders ellipsis-controlled correctly 1`] = `
<div
  class="ant-flex css-var-root ant-flex-align-stretch ant-flex-vertical"
  style="gap: 16px;"
>
  <div
    class="ant-flex css-var-root ant-flex-align-center"
    style="gap: 16px;"
  >
    <button
      aria-checked="false"
      checked="false"
      class="ant-switch css-var-root"
      role="switch"
      style="flex: 0 0 auto;"
      type="button"
    >
      <div
        class="ant-switch-handle"
      >
        <!---->
      </div>
      <span
        class="ant-switch-inner"
      >
        <span
          class="ant-switch-inner-checked"
        >
          <!---->
        </span>
        <span
          class="ant-switch-inner-unchecked"
        >
          <!---->
        </span>
      </span>
    </button>
    <div
      class="ant-slider css-var-root ant-slider-horizontal"
      style="flex: 1 1 auto;"
    >
      <div
        class="ant-slider-rail"
      />
      <!---->
      <div
        class="ant-slider-track"
        style="left: 0%; width: 5.263157894736842%;"
      />
      <div
        class="ant-slider-step"
      />
      <div
        aria-describedby="test-id"
        aria-disabled="false"
        aria-orientation="horizontal"
        aria-valuemax="20"
        aria-valuemin="1"
        aria-valuenow="2"
        class="ant-slider-handle"
        mock="false"
        role="slider"
        style="left: 5.263157894736842%; transform: translateX(-50%);"
        tabindex="0"
      />
      <!---->
      <!---->
      <!---->
    </div>
  </div>
  <div
    aria-label="Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team."
    class="ant-typography ant-typography-ellipsis css-var-root"
  >
    Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.Antdv Next, a design language for background applications, is refined by Ant UED Team.
    <!---->
    <!---->
    <!---->
    <!---->
    <button
      aria-describedby="test-id"
      aria-label="Copy"
      class="ant-typography-copy"
      type="button"
    >
      <span
        class="anticon-copy"
      />
    </button>
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`typography demo > renders ellipsis-middle correctly 1`] = `
<div
  data-v-app=""
>
  <span
    aria-label="In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of "
    class="ant-typography ant-typography-ellipsis css-var-root"
    style="max-width: 100%;"
  >
    In the process of internal desktop applications development, many different design specs and implementations would be involved, which might cause designers and developers difficulties and duplication and reduce the efficiency of 
    <!---->
    development.
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </span>
</div>
`;

exports[`typography demo > renders suffix correctly 1`] = `
<div>
  <div
    class="ant-slider css-var-root ant-slider-horizontal"
  >
    <div
      class="ant-slider-rail"
    />
    <!---->
    <div
      class="ant-slider-track"
      style="left: 0%; width: 0%;"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-describedby="test-id"
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="10"
      aria-valuemin="1"
      aria-valuenow="1"
      class="ant-slider-handle"
      mock="false"
      role="slider"
      style="left: 0%; transform: translateX(-50%);"
      tabindex="0"
    />
    <!---->
    <!---->
    <!---->
  </div>
  <div
    aria-label="To be, or not to be, that is the question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life"
    class="ant-typography ant-typography-ellipsis css-var-root"
    title="To be, or not to be, that is the question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life--William Shakespeare"
  >
    To be, or not to be, that is the question: Whether it is nobler in the mind to suffer. The slings and arrows of outrageous fortune Or to take arms against a sea of troubles, And by opposing end them? To die: to sleep; No more; and by a sleep to say we end The heart-ache and the thousand natural shocks That flesh is heir to, 'tis a consummation Devoutly to be wish'd. To die, to sleep To sleep- perchance to dream: ay, there's the rub! For in that sleep of death what dreams may come When we have shuffled off this mortal coil, Must give us pause. There 's the respect That makes calamity of so long life
    <!---->
    --William Shakespeare
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;

exports[`typography demo > renders text correctly 1`] = `
<div
  class="ant-space ant-space-vertical ant-space-gap-row-small ant-space-gap-col-small css-var-root"
>
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      Antdv Next (default)
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-secondary css-var-root"
    >
       Antdv Next (secondary) 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-success css-var-root"
    >
       Antdv Next (success) 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-warning css-var-root"
    >
       Antdv Next (warning) 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-danger css-var-root"
    >
       Antdv Next (danger) 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography ant-typography-disabled css-var-root"
    >
       Antdv Next (disabled) 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <mark>
         Antdv Next (mark) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </mark>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <code>
         Antdv Next (code) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </code>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <kbd>
         Antdv Next (keyboard) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </kbd>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <u>
         Antdv Next (underline) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </u>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <del>
         Antdv Next (delete) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </del>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <strong>
         Antdv Next (strong) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </strong>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <span
      class="ant-typography css-var-root"
    >
      <i>
         Antdv Next (italic) 
        <!---->
        <!---->
        <!---->
        <!---->
        <!---->
      </i>
      <!---->
      <!---->
      <!---->
    </span>
  </div>
  <!---->
  <div
    class="ant-space-item"
  >
    <a
      class="ant-typography ant-typography-link css-var-root"
      href="https://ant.design"
      rel="noopener noreferrer"
      target="_blank"
    >
       Antdv Next (Link) 
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
      <!---->
    </a>
  </div>
  <!---->
</div>
`;

exports[`typography demo > renders title correctly 1`] = `
<div>
  <h1
    class="ant-typography css-var-root"
  >
    h1. Antdv Next
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h1>
  <h2
    class="ant-typography css-var-root"
  >
     h2. Antdv Next 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h2>
  <h3
    class="ant-typography css-var-root"
  >
     h3. Antdv Next 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h3>
  <h4
    class="ant-typography css-var-root"
  >
     h4. Antdv Next 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h4>
  <h5
    class="ant-typography css-var-root"
  >
     h5. Antdv Next 
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
    <!---->
  </h5>
</div>
`;
